students/SokolovaMargarita/task_02/src/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app19
  labels:
    org.bstu.student.fullname: "Sokolova-Margarita-Aleksandrovna"
    org.bstu.student.id: "220024"
    org.bstu.group: "AS-63"
    org.bstu.variant: "19"
    org.bstu.course: "RSIOT"
    org.bstu.owner: "soko1ova"
    org.bstu.student.slug: "as-63-220024-v19"
